Configures compiler and updates module dependencies
Adds compiler arguments to allow access to unnammed modules.

Removes unnecessary module dependency.